<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_default"
    tools:context=".LoginActivity">




    <TextView
        android:id="@+id/hyperlink2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="324dp"
        android:layout_marginEnd="254dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="254dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:autoLink="web"
        android:text="@string/HyperLink_ShodanProfile"
        android:textColor="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:text="@string/Info_Go_To_Hyperlink"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ApikeyEditText" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/ApikeyEditText"
        android:layout_width="177dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="28dp"
        android:hint="@string/EditText_ApikeyHere"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange"
        app:layout_constraintEnd_toStartOf="@+id/LogInButton"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="19dp"
        android:text="@string/Info_Use_Camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hyperlink2" />

    <Button
        android:id="@+id/OpenCameraButton"
        android:layout_width="191dp"
        android:layout_height="53dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:background="@drawable/searchbutton"
        android:text="@string/Get_Apikey_With_Camera"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <Button
        android:id="@+id/LogInButton"
        android:layout_width="106dp"
        android:layout_height="49dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="28dp"
        android:background="@drawable/searchbutton"
        android:text="@string/LogIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>