<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_default"
    tools:context=".AboutActivity">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="240dp"
        android:textColor="@color/orange"
        android:text="@string/About_Intro"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="125dp"
        android:layout_marginRight="125dp"
        android:layout_marginTop="240dp"
        android:textColor="@color/orange"
        android:text="@string/About_Links_Info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/hyperlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:layout_marginEnd="254dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="254dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="42dp"
        android:textColor="@color/orange"
        android:text="@string/hyperlink"
        app:layout_constraintBottom_toTopOf="@+id/hyperlink2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        android:autoLink="web"

        />

    <TextView
        android:id="@+id/hyperlink2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:layout_marginEnd="254dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="254dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="13dp"
        android:textColor="@color/orange"
        android:text="@string/hyperlink2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hyperlink"
        android:autoLink="web"

        />


</android.support.constraint.ConstraintLayout>