<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_default"
    tools:context=".ExtraInformationOfDevice">

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:textColor="@color/orange"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/Html"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:textColor="@color/orange"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/Uptime"
        app:layout_constraintBottom_toTopOf="@+id/textView11"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/Product"
        app:layout_constraintBottom_toTopOf="@+id/textView28"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="wrap_content"
        android:textColor="@color/orange"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/Version"
        app:layout_constraintBottom_toTopOf="@+id/textView13"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/Port"
        app:layout_constraintBottom_toTopOf="@+id/textView14"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/Link"
        app:layout_constraintBottom_toTopOf="@+id/textView15"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/Os"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/Timestamp"
        app:layout_constraintBottom_toTopOf="@+id/textView17"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/orange"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/Info"
        app:layout_constraintBottom_toTopOf="@+id/Information_box"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Information_box"
        android:textColor="@color/orange"
        android:layout_width="331dp"
        android:layout_height="126dp"
        android:layout_marginBottom="18dp"
        android:layout_marginEnd="37dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="37dp"
        android:layout_marginStart="16dp"
        android:text="@string/DefaultField"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/html_data"
        android:textColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="10dp"
        android:text="@string/DefaultField"
        app:layout_constraintBottom_toTopOf="@+id/uptime_data"
        app:layout_constraintStart_toEndOf="@+id/textView9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.489" />

    <TextView
        android:id="@+id/uptime_data"
        android:textColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/DefaultField"
        app:layout_constraintBottom_toTopOf="@+id/product_data"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <TextView
        android:id="@+id/product_data"
        android:textColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/DefaultField"
        app:layout_constraintBottom_toTopOf="@+id/version_data"
        app:layout_constraintStart_toEndOf="@+id/textView11" />

    <TextView
        android:id="@+id/version_data"
        android:textColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/DefaultField"
        app:layout_constraintBottom_toTopOf="@+id/port_data"
        app:layout_constraintStart_toEndOf="@+id/textView28" />

    <TextView
        android:id="@+id/port_data"
        android:textColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/DefaultField"
        app:layout_constraintBottom_toTopOf="@+id/link_data"
        app:layout_constraintStart_toEndOf="@+id/textView13" />

    <TextView
        android:id="@+id/link_data"
        android:textColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/DefaultField"
        app:layout_constraintBottom_toTopOf="@+id/os_data"
        app:layout_constraintStart_toEndOf="@+id/textView14" />

    <TextView
        android:id="@+id/os_data"
        android:textColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/DefaultField"
        app:layout_constraintBottom_toTopOf="@+id/textView16"
        app:layout_constraintStart_toEndOf="@+id/textView15" />

    <TextView
        android:id="@+id/timestamp_data"
        android:textColor="@color/orange"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:text="@string/DefaultField"
        app:layout_constraintBottom_toTopOf="@+id/Information_box"
        app:layout_constraintStart_toEndOf="@+id/textView16" />

</android.support.constraint.ConstraintLayout>